apps/voting/dev/db-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: back
      app: postgres
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: postgres
        role: db
        tier: back
    spec:
      containers:
      - image: postgres:9.4
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 5432
          protocol: TCP
      restartPolicy: Always
