apps/voting/dev/vote_dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote-dep
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: front
      app: vote
    matchExpressions:
      - {key: tier, operator: In, values: [front]}
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: vote
        role: ui
        tier: front
    spec:
      containers:
      - image: schoolofdevops/vote
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
