apps/voting/dev/vote_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: svc
    tier: front
  name: vote
  namespace: dev
spec:
  selector:
    app: vote
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
