apps/voting/dev/vote-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: vote.example.com
    http:
      paths:
      - backend:
          serviceName: vote
          servicePort: 80
