apps/voting/dev/vote_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: vote.example.com
    http:
      paths:
      - backend:
          serviceName: vote
          servicePort: 80
